--- a/flask_app/templates/index.html
+++ b/flask_app/templates/index.html
@@ -12,7 +12,7 @@
 <body>
     <div class="container mt-3 d-flex flex-column align-items-center">
         <!-- Heading with image, title, and button -->
-        <img src="/static/images/pokemonlogo.png" alt="Pokemon Logo" width="300" height="111">
+        <img src="/static/images/PokemonLogo.png" alt="Pokemon Logo" width="300" height="111">
         <h1 class="mt-3">Rank Pokemon in this amazing web application!</h1>
         <a class="btn btn-warning btn-lg col-3 mt-3 mb-5" href="/rank" role="button">Click here to rank the Pokemon</a>
     </div>
@@ -28,16 +28,16 @@
             <tbody class="table-group-divider">
                 {% if pokemons %}
                     {% for pokemon in pokemons %}
-                    <tr>
-                        <td>{{pokemon.rank}}</td>
-                        <td>{{pokemon.name}}</td>
-                    </tr>
+                        <tr>
+                            <td>{{pokemon.rank}}</td>
+                            <td>{{pokemon.name}}</td>
+                        </tr>
                     {% endfor %}
                 {% endif %}
             </tbody>
         </table>
-        <!-- Cute pokemon photo -->
-        <img src="/static/images/cutepokemon.png" alt="Cute Pokemon" width="149" height="725" class="ms-5">
+        <!-- Cute Pokemon photo -->
+        <img src="/static/images/CutePokemon.png" alt="Cute Pokemon" width="149" height="725" class="ms-5">
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
