--- a/flask_app/templates/rank.html
+++ b/flask_app/templates/rank.html
@@ -12,13 +12,13 @@
 <body>
     <div class="container mt-3 d-flex flex-column align-items-center">
         <!-- Heading with image and title -->
-        <img src="/static/images/pokemonlogo.png" alt="Pokemon Logo" width="300" height="111">
+        <img src="/static/images/PokemonLogo.png" alt="Pokemon Logo" width="300" height="111">
         <h1 class="mt-3">Rank the Pokemon below!</h1>
     </div>
     <div class="container">
-        <!-- Form with a select option for each pokemon -->
-        <form action="/rank_process" method="post">
-            <!-- Validate the form -->
+        <!-- Pokemon rank form -->
+        <form action="/rank/process" method="post">
+            <!-- Form validations -->
             <div class="container d-flex flex-wrap justify-content-center">
                 {% with messages = get_flashed_messages(with_categories=true) %}
                     {% if messages %}
@@ -29,176 +29,18 @@
                 {% endwith %}
             </div>
             <div class="d-flex flex-wrap justify-content-center">
-                <div class="form-group m-3">
-                    <label for="Pikachu" class="fs-4">Pikachu</label>
-                    <select class="form-select form-select-lg mb-3 center" style="width: 200px;" name="Pikachu" id="Pikachu">
-                        <option value="0" selected>Choose a Rank</option>
-                        <option value="1">One</option>
-                        <option value="2">Two</option>
-                        <option value="3">Three</option>
-                        <option value="4">Four</option>
-                        <option value="5">Five</option>
-                        <option value="6">Six</option>
-                        <option value="7">Seven</option>
-                        <option value="8">Eight</option>
-                        <option value="9">Nine</option>
-                        <option value="10">Ten</option>
-                    </select>
-                    <img src="/static/images/pikachu.png" alt="Pikachu" width="200" height="200">
-                </div>
-                <div class="form-group m-3">
-                    <label for="Charmander" class="fs-4">Charmander</label>
-                    <select class="form-select form-select-lg mb-3 center" style="width: 200px;" name="Charmander" id="Charmander">
-                        <option value="0" selected>Choose a Rank</option>
-                        <option value="1">One</option>
-                        <option value="2">Two</option>
-                        <option value="3">Three</option>
-                        <option value="4">Four</option>
-                        <option value="5">Five</option>
-                        <option value="6">Six</option>
-                        <option value="7">Seven</option>
-                        <option value="8">Eight</option>
-                        <option value="9">Nine</option>
-                        <option value="10">Ten</option>
-                    </select>
-                    <img src="static/images/charmander.png" alt="Charmander" width="150" height="200">
-                </div>
-                <div class="form-group m-3">
-                    <label for="Squirtle" class="fs-4">Squirtle</label>
-                    <select class="form-select form-select-lg mb-3 center" style="width: 200px;" name="Squirtle" id="Squirtle">
-                        <option value="0" selected>Choose a Rank</option>
-                        <option value="1">One</option>
-                        <option value="2">Two</option>
-                        <option value="3">Three</option>
-                        <option value="4">Four</option>
-                        <option value="5">Five</option>
-                        <option value="6">Six</option>
-                        <option value="7">Seven</option>
-                        <option value="8">Eight</option>
-                        <option value="9">Nine</option>
-                        <option value="10">Ten</option>
-                    </select>
-                    <img src="static/images/squirtle.png" alt="Squirtle" width="185" height="200">
-                </div>
-                <div class="form-group m-3">
-                    <label for="Gengar" class="fs-4">Gengar</label>
-                    <select class="form-select form-select-lg mb-3 center" style="width: 200px;" name="Gengar" id="Gengar">
-                        <option value="0" selected>Choose a Rank</option>
-                        <option value="1">One</option>
-                        <option value="2">Two</option>
-                        <option value="3">Three</option>
-                        <option value="4">Four</option>
-                        <option value="5">Five</option>
-                        <option value="6">Six</option>
-                        <option value="7">Seven</option>
-                        <option value="8">Eight</option>
-                        <option value="9">Nine</option>
-                        <option value="10">Ten</option>
-                    </select>
-                    <img src="static/images/gengar.png" alt="Gengar" width="200" height="200">
-                </div>
-                <div class="form-group m-3">
-                    <label for="Dragonite" class="fs-4">Dragonite</label>
-                    <select class="form-select form-select-lg mb-3 center" style="width: 200px;" name="Dragonite" id="Dragonite">
-                        <option value="0" selected>Choose a Rank</option>
-                        <option value="1">One</option>
-                        <option value="2">Two</option>
-                        <option value="3">Three</option>
-                        <option value="4">Four</option>
-                        <option value="5">Five</option>
-                        <option value="6">Six</option>
-                        <option value="7">Seven</option>
-                        <option value="8">Eight</option>
-                        <option value="9">Nine</option>
-                        <option value="10">Ten</option>
-                    </select>
-                    <img src="/static/images/dragonite.png" alt="Dragonite" width="200" height="200">
-                </div>
-                <div class="form-group m-3">
-                    <label for="Jigglypuff" class="fs-4">JigglyPuff</label>
-                    <select class="form-select form-select-lg mb-3 center" style="width: 200px;" name="Jigglypuff" id="Jigglypuff">
-                        <option value="0" selected>Choose a Rank</option>
-                        <option value="1">One</option>
-                        <option value="2">Two</option>
-                        <option value="3">Three</option>
-                        <option value="4">Four</option>
-                        <option value="5">Five</option>
-                        <option value="6">Six</option>
-                        <option value="7">Seven</option>
-                        <option value="8">Eight</option>
-                        <option value="9">Nine</option>
-                        <option value="10">Ten</option>
-                    </select>
-                    <img src="/static/images/jigglypuff.png" alt="JigglyPuff" width="200" height="200">
-                </div>
-                <div class="form-group m-3">
-                    <label for="Snorlax" class="fs-4">Snorlax</label>
-                    <select class="form-select form-select-lg mb-3 center" style="width: 200px;" name="Snorlax" id="Snorlax">
-                        <option value="0" selected>Choose a Rank</option>
-                        <option value="1">One</option>
-                        <option value="2">Two</option>
-                        <option value="3">Three</option>
-                        <option value="4">Four</option>
-                        <option value="5">Five</option>
-                        <option value="6">Six</option>
-                        <option value="7">Seven</option>
-                        <option value="8">Eight</option>
-                        <option value="9">Nine</option>
-                        <option value="10">Ten</option>
-                    </select>
-                    <img src="/static/images/snorlax.png" alt="Snorlax" width="200" height="200">
-                </div>
-                <div class="form-group m-3">
-                    <label for="Gyarados" class="fs-4">Gyarados</label>
-                    <select class="form-select form-select-lg mb-3 center" style="width: 200px;" name="Gyarados" id="Gyarados">
-                        <option value="0" selected>Choose a Rank</option>
-                        <option value="1">One</option>
-                        <option value="2">Two</option>
-                        <option value="3">Three</option>
-                        <option value="4">Four</option>
-                        <option value="5">Five</option>
-                        <option value="6">Six</option>
-                        <option value="7">Seven</option>
-                        <option value="8">Eight</option>
-                        <option value="9">Nine</option>
-                        <option value="10">Ten</option>
-                    </select>
-                    <img src="/static/images/gyarados.png" alt="Gyarados" width="200" height="200">
-                </div>
-                <div class="form-group m-3">
-                    <label for="Eevee" class="fs-4">Eevee</label>
-                    <select class="form-select form-select-lg mb-3 center" style="width: 200px;" name="Eevee" id="Eevee">
-                        <option value="0" selected>Choose a Rank</option>
-                        <option value="1">One</option>
-                        <option value="2">Two</option>
-                        <option value="3">Three</option>
-                        <option value="4">Four</option>
-                        <option value="5">Five</option>
-                        <option value="6">Six</option>
-                        <option value="7">Seven</option>
-                        <option value="8">Eight</option>
-                        <option value="9">Nine</option>
-                        <option value="10">Ten</option>
-                    </select>
-                    <img src="/static/images/eevee.png" alt="Eevee" width="200" height="200">
-                </div>
-                <div class="form-group m-3">
-                    <label for="Onix" class="fs-4">Onix</label>
-                    <select class="form-select form-select-lg mb-3 center" style="width: 200px;" name="Onix" id="Onix">
-                        <option value="0" selected>Choose a Rank</option>
-                        <option value="1">One</option>
-                        <option value="2">Two</option>
-                        <option value="3">Three</option>
-                        <option value="4">Four</option>
-                        <option value="5">Five</option>
-                        <option value="6">Six</option>
-                        <option value="7">Seven</option>
-                        <option value="8">Eight</option>
-                        <option value="9">Nine</option>
-                        <option value="10">Ten</option>
-                    </select>
-                    <img src="/static/images/onix.png" alt="Onix" width="200" height="200">
-                </div>
+                {% for pokemon in pokemons %}
+                    <div class="form-group m-3">
+                        <label for="{{pokemon}}" class="fs-4">{{pokemon}}</label>
+                        <select class="form-select form-select-lg mb-3 center select-width" name="{{pokemon}}" id="{{pokemon}}">
+                            <option value="0" selected>Choose a Rank</option>
+                            {% for i in range(1, 11) %}
+                                <option value="{{i}}">{{i}}</option>
+                            {% endfor %}
+                        </select>
+                        <img src="/static/images/{{pokemon}}.png" alt="{{pokemon}}" class="{{pokemon}}">
+                    </div>
+                {% endfor %}
             </div>
             <!-- Submit form button -->
             <div class="form-group m-3 d-flex justify-content-center">
@@ -208,35 +50,25 @@
         <!-- Return to homepage button -->
         <div class="d-flex justify-content-center mb-5">
             <a class="btn btn-primary btn-lg me-5" href="/" role="button">Return to the Homepage</a>
-            <!-- Randomize ranking button -->
-            <form action="rank_randomize" method="post">
-                <input type="hidden" value="" name="Pikachu">
-                <input type="hidden" value="" name="Charmander">
-                <input type="hidden" value="" name="Squirtle">
-                <input type="hidden" value="" name="Gengar">
-                <input type="hidden" value="" name="Dragonite">
-                <input type="hidden" value="" name="Jigglypuff">
-                <input type="hidden" value="" name="Snorlax">
-                <input type="hidden" value="" name="Gyarados">
-                <input type="hidden" value="" name="Eevee">
-                <input type="hidden" value="" name="Onix">
+            <!-- Randomize ranks button -->
+            <form action="/rank/randomize" method="post">
+                {% for pokemon in pokemons %}
+                    <input type="hidden" value="" name="{{pokemon}}">
+                {% endfor %}
                 <button type="submit" class="btn btn-lg btn-success">Randomize!!</button>
             </form>
         </div>
     </div>
 
-    <!-- jQuery code to hide rank option once it has been selected -->
+    <!-- Hide rank option once it has been selected -->
     <!-- Reference: https://stackoverflow.com/questions/26137309/remove-selected-option-from-another-select-box -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script>
         $(document).ready(function(){
             $('select').on('change', function(event ) {
-                //restore previously selected value
                 var prevValue = $(this).data('previous');
                 $('select').not(this).find('option[value="'+prevValue+'"]').show();
-                //hide option selected
                 var value = $(this).val();
-                //update previously selected data
                 $(this).data('previous',value);
                 $('select').not(this).find('option[value="'+value+'"]').hide();
             });
